[FEAT] 뉴스 3개 추출 방식으로 변경